# AsyncAPI

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml  movies_backup.sql  nginx.conf  pyproject.toml
docker/api/dev/: Dockerfile
docker/api/prod/: Dockerfile
docker/dev/: Dockerfile
docker/etl/: Dockerfile
docker/prod/: Dockerfile
docker/server/: Dockerfile
nginx/: default.conf
src/: main.py
src/api/: app.py  main.py  metadata.py
src/api/api/v1/: films.py  genres.py  persons.py
src/api/core/: config.py
src/api/db/: elastic.py  redis.py  search_engine.py  storage.py
src/api/models/: film.py  genre.py  person.py
src/api/routers/: test.py
src/api/services/: base.py  cache.py  film.py  genre.py  person.py
src/api/v1/: films.py  genres.py  persons.py
src/core/: config.py  logger.py
src/db/: elastic.py  redis.py
src/etl/: es_schema.json  main.py  managers.py  models.py  state.json
src/etl/core/: config.py
src/etl/es_schema/: genres.json
src/etl/extractors/: base.py  film_work.py  genre.py  person.py
src/etl/loaders/: film_work.py  genre.py  person.py
src/etl/transformers/: film_work.py  genre.py  person.py
src/etl/utils/: backoff.py  connectors.py  state.py
src/models/: film.py  genre.py
src/services/: cache.py  film.py  genre.py  person.py
tests/functional/: .env.example  conftest.py  docker-compose.yml  launcher.py  pyproject.toml  settings.py
tests/functional/docker/pytest/: Dockerfile
tests/functional/src/: test_film.py  test_search.py
tests/functional/src/films/: test_film.py  test_film_data.py  test_film_search.py  test_film_sort.py  test_redis_filmcache.py
tests/functional/src/genres/: test_genre_data.py  test_genre_list.py
tests/functional/src/persons/: test_person_data.py  test_person_films.py  test_person_search.py
tests/functional/testdata/filler/: generator.py  genres_data.json  movies_data.json  persons_data.json
tests/functional/testdata/indices/: persons.json
tests/functional/utils/: backoff.py  es_waiter.py  logger.py  redis_waiter.py
